<resources>
    <string name="app_name">GymApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="contiune">Contiune</string>
    <string name="take_the_first_step_towards_a_healthy_life_join_us_to_reach_your_goals">Take the first step towards a healthy life. Join us to reach your goals!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="goal">Goals</string>
    <string name="target_weight">Target Weight</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="back_to_sign_up">Back to Sign Up</string>
    <string name="age">Age</string>
    <string name="weightLoss">Weight Loss</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="three_day">Three days</string>
    <string name="three_month">Three months</string>
    <string name="six_month">Six months</string>
    <string name="weightGain">Weight Gain</string>
    <string name="increaseEndurance">Increase Endurance</string>
    <string name="buildMuscleMass">Build Muscle Mass</string>
    <string name="improveFlexibility">Improve Flexibility and Balance</string>
    <string name="please_fill_in_the_empty_fields">Please fill in the empty fields..</string>
    <string name="welcome">Welcome</string>
    <string name="pursue_your_dreams_with_sports_and_determination">Pursue your dreams with sports and determination.</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcomelogin">Login</string>
    <string name="login">Login</string>
    <string name="train_and_live_the_new_experience_of_exercising_at_home">Train and live the new experience of exercising at home</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="buttonlogin">Login</string>
    <string name="or_ncreate_account">or\nCreate Account</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="please_enter_the_email_of_the_account_for_which_you_want_to_reset_the_password">Please enter the email of the account for which you want to reset the password.</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset">RESET</string>
    <string name="home" translatable="false">Home</string>
    <string name="profile">Profile</string>
    <string name="article">Article</string>
    <string name="remember_me">Remember Me</string>
    <string name="motivation_2">Taking a small step every day leads to big achievements over time.</string>
    <string name="wave_hand" translatable="false">👋</string>
    <string name="streak">Streak</string>
    <string name="count">count</string>
    <string name="calendar">Calendar</string>
    <string name="workout">Workout</string>
    <string name="all">All</string>
    <string name="article_title">Article Title</string>
    <string name="popular_workouts">Popular Workouts</string>
    <string name="best_trainers">Best Trainers</string>
    <string name="muscle_groups">Muscle Groups</string>
    <string name="trainer_username">Trainer Username</string>
    <string name="specialization">Specialization</string>
    <string name="see_all">See All</string>
    <string name="program_name">Program Name</string>
    <string name="description">Description</string>
    <string name="muscle_name">Muscle Name</string>
    <string name="target">Target</string>
    <string name="equipment">Equipment</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="instructions">Instructions</string>
    <string name="let_s_do_it">Let\'s do it!</string>
    <string name="sets_amp_reps"><![CDATA[Sets & Reps]]></string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="time">Time</string>
    <string name="start">Start</string>
    <string name="sedantary">Sedentary [little or no exercise]</string>
    <string name="light">Light [exercise 1-3 times/week</string>
    <string name="moderat">Moderat [exercise 4-5 times/week]</string>
    <string name="veryActive">Very Active [intense exercise 6-7 times/week</string>
    <string name="extraActive">Extra Active [very intense exercise daily]</string>
    <string name="save">Save</string>
    <string name="personalize_your_training">Personalize Your Training</string>
    <string name="execution_define">Define the perfect exercise routine by adjusting weights and reps to match your fitness goals. Personalize every aspect of your training for optimal results and satisfaction.</string>
    <string name="choose_your_activity_level">Choose your activity level</string>
    <string name="invalid_body_weight_must_be_between_30_and_250kgs">Invalid body weight : must be between 30 and 250kgs</string>
    <string name="type">Type</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="mm_ss" translatable="false">MM:SS</string>
    <string name="break_and_next_set">Break and Next Set</string>
    <string name="finish_workout">Finish Workout</string>
    <string name="zero" translatable="false">0</string>
    <string name="search">Search</string>
    <string name="todo_list_is_empty_for_current_day">Todo List is empty for current day</string>
    <string name="category">Category</string>
    <string name="reading_time">Reading Time</string>
    <string name="no_results_found_according_to_your_search">No results found according to your search</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="days">days</string>
    <string name="start_weight">Start Weight</string>
    <string name="differences">Differences</string>
    <string name="_8kg" translatable="false">8KG</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="calculators">Calculators</string>
    <string name="language">Language</string>
    <string name="good_morning">Good morning,</string>
    <string name="today_s_effort_makes_you_who_you_ll_be_tomorrow_give_it_your_best">Today\'s effort makes you who you\'ll be tomorrow.\nGive it your best.</string>
    <string name="explanation">Explanation</string>
    <string name="tyour_bmr_and_calorie_needs_are_calculated_with_the_fat_percentage_and_body_weight_you_enter_katch_mcardle_formula_is_used_for_this">\tYour BMR and calorie needs are calculated with the fat percentage and body weight you enter. Katch- McArdle Formula is used for this</string>
    <string name="calculation">calculation.</string>
    <string name="got_it">Got It</string>
    <string name="body_fat_calculator">Body Fat Calculator</string>
    <string name="fat_percentage">fat percentage.</string>
    <string name="h_gh">HİGH</string>
    <string name="low">LOW</string>
    <string name="healthy">HEALTHY</string>
    <string name="you_have_a">You have a</string>
    <string name="_18" translatable="false">%18</string>
    <string name="your_body_fat_percentage_is">Your body fat percentage is :</string>
    <string name="calculate">Calculate</string>
    <string name="invalid_waist_must_be_between_60_and_80cm">Invalid waist : must be between 60 and 80cm</string>
    <string name="your_waist_in_cm">Your waist in cm</string>
    <string name="invalid_height_must_be_between_35_and_45cm">Invalid height : must be between 35 and 45cm</string>
    <string name="your_neck_in_cm">Your neck in cm</string>
    <string name="invalid_hip_size_must_be_60_and_120cm">Invalid hip size : must be 60 and 120cm</string>
    <string name="your_hip_size_in_cm">Your hip size in cm</string>
    <string name="invalid_height_must_be_number">Invalid height : must be number</string>
    <string name="your_height_in_cm">Your height in cm</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="calorie">Calorie</string>
    <string name="body_fat_percentage">Body Fat Percentage</string>
    <string name="_1rm">1RM</string>
    <string name="jumping_rope">Jumping Rope</string>
    <string name="ideal_weight">Ideal Weight</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="invalid_body_fat_must_be_between_2_and_60">Invalid body fat : must be between 2 and 60</string>
    <string name="body_weight">Body Weight</string>
    <string name="your_bmr_is">Your BMR is</string>
    <string name="your_calorie_need_is">Your calorie need is</string>
    <string name="fat_percentage_calc">Fat percentage</string>
    <string name="ideal_weight_calculator">Ideal Weight Calculator</string>
    <string name="enter_your_height_in_cm">Enter your height in cm</string>
    <string name="invalid_height_must_be_between_150_and_200cm">Invalid height : must be between 150 and 200cm</string>
    <string name="enter_your_weight_in_kg">Enter your weight in kg</string>
    <string name="invalid_body_weight_must_be_30_and_250kgs">Invalid body weight : must be 30 and 250kgs</string>
    <string name="you_are">You are</string>
    <string name="below">BELOW</string>
    <string name="your_ideal_weight">your ideal weight</string>
    <string name="you_are_at_your_ideal_weight">You are at your ideal weight</string>
    <string name="congrats">CONGRATS</string>
    <string name="obese">OBESE</string>
    <string name="_1_rm_calculator">1 RM Calculator</string>
    <string name="enter_your_weight_in_kgs">Enter your weight in kgs</string>
    <string name="invalid_weight_must_be_0_and_500">Invalid weight : must be 0 and 500</string>
    <string name="enter_your_number_of_reps">Enter your number of reps</string>
    <string name="invalid_reps_must_be_between_0_and_10">Invalid reps : must be between 0 and 10</string>
    <string name="statistic">Statistic</string>
    <string name="logout">Logout</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="invalid_name_must_be_between_2_and_20_characters">Invalid name : must be between 2 and 20 characters</string>
    <string name="invalid_name_must_be_between_0_and_100">Invalid name : must be between 0 and 100</string>
    <string name="invalid_name_must_be_between_30_and_250">Invalid name : must be between 30 and 250</string>
    <string name="jumping_rope_calculator">Jumping Rope Calculator</string>
    <string name="weight_in_kg">Weight in kg</string>
    <string name="invalid_weight_must_be_lower_than_and_500">Invalid weight : must be lower than and 500</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="type_of_activity">Type of Activity</string>
    <string name="met">MET</string>
    <string name="burned">Burned</string>
    <string name="slow_pace_10_lt_100_skips_min_10_2_foot_skip_10_rhythm_bounce"><![CDATA[Slow pace\n < 100 skips/min \n 2 foot skip \nrhythm bounce]]></string>
    <string name="moderate_pace_10_100_120_skips_min_10_2_foot_skip_10_plain_bounce">Moderate pace,\n100-120 skips/min,\n2 foot skip,\nplain bounce</string>
    <string name="to_do_box">To-Do Box</string>
    <string name="i_ll_make_20_push_up">I\'ll make 20 push up</string>
    <string name="cancel">Cancel</string>
    <string name="reps_stats">Reps :</string>
    <string name="sets_stats">Sets :</string>
    <string name="weight_stats">Weight :</string>
</resources>