<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".fragment.BodyFatPercentageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/goBackImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="15dp"
                android:background="@color/gray"
                android:importantForAccessibility="no"
                android:src="@drawable/calculators_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_gray"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/revolutiongothic_extra_bold"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:text="@string/body_fat_calculator"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/infoImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:background="@color/gray"
                android:importantForAccessibility="no"
                android:src="@drawable/icon_info" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/line"
            android:backgroundTint="@color/light_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/revolutiongothic_light"
            android:text="@string/choose_your_gender"
            android:textColor="@color/silver"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/revolutiongothic_light"
            android:text="@string/male"
            android:textColor="#008EFF"
            android:textSize="22sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/genderSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/revolutiongothic_light"
            android:text="@string/female"
            android:textColor="#FB2B72"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <EditText
                android:id="@+id/personHeightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:fontFamily="@font/revolutiongothic_light"
                android:hint="@string/your_height_in_cm"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingBottom="28dp"
                android:textColor="@color/white"
                android:textColorHint="@color/silver"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/falseHeightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/revolutiongothic_extra_bold"
                android:text="@string/invalid_height_must_be_number"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/personHipText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:fontFamily="@font/revolutiongothic_light"
                android:hint="@string/your_hip_size_in_cm"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingBottom="28dp"
                android:textColor="@color/white"
                android:textColorHint="@color/silver"
                android:textSize="22sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/falseHipText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/revolutiongothic_extra_bold"
                android:text="@string/invalid_hip_size_must_be_60_and_120cm"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <EditText
                android:id="@+id/personNeckSizeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:fontFamily="@font/revolutiongothic_light"
                android:hint="@string/your_neck_in_cm"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingBottom="28dp"
                android:textColor="@color/white"
                android:textColorHint="@color/silver"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/falseNeckSizeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/revolutiongothic_extra_bold"
                android:text="@string/invalid_height_must_be_between_35_and_45cm"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/personWaistSizeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:fontFamily="@font/revolutiongothic_light"
                android:hint="@string/your_waist_in_cm"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingBottom="28dp"
                android:textColor="@color/white"
                android:textColorHint="@color/silver"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/falseWaistSizeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/revolutiongothic_extra_bold"
                android:text="@string/invalid_waist_must_be_between_60_and_80cm"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp">

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/revolutiongothic_extra_bold"
            android:text="@string/calculate"
            android:textColor="@color/gray"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultLinearLayuot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/revolutiongothic_light"
            android:text="@string/your_body_fat_percentage_is"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/revolutiongothic_light"
            android:text="@string/_18"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fatPercentageTextLayuot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/revolutiongothic_light"
            android:text="@string/you_have_a"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/healthyPercentageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/revolutiongothic_extra_bold"
                android:text="@string/healthy"
                android:textColor="@color/green"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lowPercentageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/revolutiongothic_extra_bold"
                android:text="@string/low"
                android:textColor="@color/red"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/highPercentageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/revolutiongothic_extra_bold"
                android:text="@string/h_gh"
                android:textColor="@color/red"
                android:textSize="22sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/revolutiongothic_light"
            android:text="@string/fat_percentage"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>