<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/info_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/explanation"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/explanationId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tyour_bmr_and_calorie_needs_are_calculated_with_the_fat_percentage_and_body_weight_you_enter_katch_mcardle_formula_is_used_for_this"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/calculation"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/line"
            android:backgroundTint="#0C0C0C" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/gotItCalorieButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/got_it"
            android:textColor="@color/red"
            android:textSize="17sp" />

    </LinearLayout>


</LinearLayout>